/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.0.1/userguide/java_library_plugin.html
 */

plugins {
    id 'jacoco'
    id 'checkstyle'
    id 'java-library'
    id 'maven-publish'
    id 'com.github.ben-manes.versions' version '0.27.0'
    id 'com.github.dawnwords.jacoco.badge' version '0.2.0'
}

group = 'com.github.jkatzwinkel'
version = '0.0.2-SNAPSHOT'
sourceCompatibility = '11'

publishing {
    publications {
        maven(MavenPublication) {
            artifactId = 'tla-common'
            pom {
                name = 'TLA Commons'
                description = 'DTO model and utility functions for the Thesaurus Linguae Aegyptiae web publication components'
            }

            from components.java
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.12'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'

    api 'com.fasterxml.jackson.core:jackson-databind:2.10.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
}

test {
    // Use junit platform for unit tests
    useJUnitPlatform()
    finalizedBy 'jacocoTestReport'
}

jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled true
    }
    finalizedBy 'generateJacocoBadge'
}

check {
    dependsOn 'jacocoTestCoverageVerification'
}

checkstyle {
    toolVersion '8.29'
    configFile file("config/checkstyle/checkstyle.xml")
    ignoreFailures = true
    maxErrors = 100
}
checkstyleMain {
    configProperties += [
        'checkstyle.header.file': file('config/checkstyle/java.header'),
        'checkstyle.regexp.header.file': file('config/checkstyle/java_regexp.header')
    ]
}
checkstyleTest {
    configFile file("config/checkstyle/checkstyle-tests.xml")
    configProperties += [
        'checkstyle.header.file': file('config/checkstyle/java.header'),
        'checkstyle.regexp.header.file': file('config/checkstyle/java_regexp.header')
    ]
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            element = 'CLASS'
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.1
           }
        }
    }
}
